codegen/parser.output
Terminals unused in grammar

   T_mod


Grammar

    0 $accept: Main $end

    1 Main: Procedure

    2 Procedure: T_proc T_identifier T_openParen ParamList T_closeParen T_return Type T_openCurly BodyProc T_closeCurly Procedure
    3          | %empty

    4 Type: T_bool_type
    5     | T_int_type
    6     | T_intptr_type
    7     | T_charptr_type
    8     | T_char_type
    9     | T_string_type T_openBracket Num T_closeBracket

   10 ParamList: T_identifier ParamListSameType T_col Type ParamListNewType
   11          | %empty

   12 ParamListSameType: T_comma T_identifier ParamListSameType
   13                  | %empty

   14 ParamListNewType: T_semiCol ParamList
   15                 | ParamList

   16 Params: Expr ParamsMore
   17       | %empty

   18 ParamsMore: T_comma Expr ParamsMore
   19           | %empty

   20 BodyProc: Procedure BodyVar BodyState Return

   21 Return: T_return Expr T_semiCol

   22 BodyVar: T_var T_identifier BodyVarSameType T_col Type T_semiCol BodyVar
   23        | %empty

   24 BodyVarSameType: T_comma T_identifier BodyVarSameType
   25                | %empty

   26 BodyState: Lhs T_assign Expr T_semiCol BodyState
   27          | Lhs T_assign T_string T_semiCol BodyState
   28          | T_openCurly BodyVar BodyState T_closeCurly BodyState
   29          | T_if T_openParen Expr T_closeParen T_openCurly BodyVar BodyState T_closeCurly BodyState
   30          | T_if T_openParen Expr T_closeParen T_openCurly BodyVar BodyState T_closeCurly T_else T_openCurly BodyVar BodyState T_closeCurly BodyState
   31          | T_while T_openParen Expr T_closeParen T_openCurly BodyVar BodyState T_closeCurly BodyState
   32          | Lhs T_assign T_identifier T_openParen Params T_closeParen T_semiCol BodyState
   33          | %empty

   34 Lhs: T_identifier
   35    | T_identifier T_openBracket Expr T_closeBracket
   36    | T_deRef T_identifier

   37 Expr: T_pipe Expr T_pipe
   38     | Expr T_less Expr
   39     | Expr T_lessOrEq Expr
   40     | Expr T_great Expr
   41     | Expr T_greatOrEq Expr
   42     | Expr T_isEq Expr
   43     | Expr T_notEq Expr
   44     | Expr T_and Expr
   45     | Expr T_or Expr
   46     | Expr T_times Expr
   47     | Expr T_divide Expr
   48     | Expr T_plus Expr
   49     | Expr T_minus Expr
   50     | T_openParen Expr T_closeParen
   51     | T_not Expr
   52     | T_minus Expr
   53     | T_plus Expr
   54     | T_addr Lhs
   55     | T_deRef Expr
   56     | T_identifier
   57     | T_identifier T_openBracket Expr T_closeBracket
   58     | Num
   59     | T_true
   60     | T_false
   61     | T_char
   62     | T_null

   63 Num: T_num_dec
   64    | T_num_oct
   65    | T_num_bin
   66    | T_num_hex


Terminals, with rules where they appear

$end (0) 0
error (256)
T_comma (258) 12 18 24
T_assign (259) 26 27 32
T_or (260) 45
T_and (261) 44
T_isEq (262) 42
T_notEq (263) 43
T_less (264) 38
T_lessOrEq (265) 39
T_great (266) 40
T_greatOrEq (267) 41
T_plus (268) 48 53
T_minus (269) 49 52
T_times (270) 46
T_divide (271) 47
T_mod (272)
T_not (273) 51
T_deRef (274) 36 55
T_addr (275) 54
T_openCurly (276) 2 28 29 30 31
T_closeCurly (277) 2 28 29 30 31
T_openBracket (278) 9 35 57
T_closeBracket (279) 9 35 57
T_openParen (280) 2 29 30 31 32 50
T_closeParen (281) 2 29 30 31 32 50
T_true (282) 59
T_false (283) 60
T_string (284) 27
T_char (285) 61
T_num_oct (286) 64
T_num_bin (287) 65
T_num_hex (288) 66
T_num_dec (289) 63
T_null (290) 62
T_if (291) 29 30
T_else (292) 30
T_while (293) 31
T_bool_type (294) 4
T_char_type (295) 8
T_int_type (296) 5
T_string_type (297) 9
T_intptr_type (298) 6
T_charptr_type (299) 7
T_proc (300) 2
T_return (301) 2 21
T_var (302) 22
T_identifier (303) 2 10 12 22 24 32 34 35 36 56 57
T_col (304) 10 22
T_semiCol (305) 14 21 22 26 27 32
T_pipe (306) 37


Nonterminals, with rules where they appear

$accept (52)
    on left: 0
Main (53)
    on left: 1, on right: 0
Procedure (54)
    on left: 2 3, on right: 1 2 20
Type (55)
    on left: 4 5 6 7 8 9, on right: 2 10 22
ParamList (56)
    on left: 10 11, on right: 2 14 15
ParamListSameType (57)
    on left: 12 13, on right: 10 12
ParamListNewType (58)
    on left: 14 15, on right: 10
Params (59)
    on left: 16 17, on right: 32
ParamsMore (60)
    on left: 18 19, on right: 16 18
BodyProc (61)
    on left: 20, on right: 2
Return (62)
    on left: 21, on right: 20
BodyVar (63)
    on left: 22 23, on right: 20 22 28 29 30 31
BodyVarSameType (64)
    on left: 24 25, on right: 22 24
BodyState (65)
    on left: 26 27 28 29 30 31 32 33, on right: 20 26 27 28 29 30 31
    32
Lhs (66)
    on left: 34 35 36, on right: 26 27 32 54
Expr (67)
    on left: 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54
    55 56 57 58 59 60 61 62, on right: 16 18 21 26 29 30 31 35 37 38
    39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 55 57
Num (68)
    on left: 63 64 65 66, on right: 9 58


State 0

    0 $accept: . Main $end

    T_proc  shift, and go to state 1

    $default  reduce using rule 3 (Procedure)

    Main       go to state 2
    Procedure  go to state 3


State 1

    2 Procedure: T_proc . T_identifier T_openParen ParamList T_closeParen T_return Type T_openCurly BodyProc T_closeCurly Procedure

    T_identifier  shift, and go to state 4


State 2

    0 $accept: Main . $end

    $end  shift, and go to state 5


State 3

    1 Main: Procedure .

    $default  reduce using rule 1 (Main)


State 4

    2 Procedure: T_proc T_identifier . T_openParen ParamList T_closeParen T_return Type T_openCurly BodyProc T_closeCurly Procedure

    T_openParen  shift, and go to state 6


State 5

    0 $accept: Main $end .

    $default  accept


State 6

    2 Procedure: T_proc T_identifier T_openParen . ParamList T_closeParen T_return Type T_openCurly BodyProc T_closeCurly Procedure

    T_identifier  shift, and go to state 7

    $default  reduce using rule 11 (ParamList)

    ParamList  go to state 8


State 7

   10 ParamList: T_identifier . ParamListSameType T_col Type ParamListNewType

    T_comma  shift, and go to state 9

    $default  reduce using rule 13 (ParamListSameType)

    ParamListSameType  go to state 10


State 8

    2 Procedure: T_proc T_identifier T_openParen ParamList . T_closeParen T_return Type T_openCurly BodyProc T_closeCurly Procedure

    T_closeParen  shift, and go to state 11


State 9

   12 ParamListSameType: T_comma . T_identifier ParamListSameType

    T_identifier  shift, and go to state 12


State 10

   10 ParamList: T_identifier ParamListSameType . T_col Type ParamListNewType

    T_col  shift, and go to state 13


State 11

    2 Procedure: T_proc T_identifier T_openParen ParamList T_closeParen . T_return Type T_openCurly BodyProc T_closeCurly Procedure

    T_return  shift, and go to state 14


State 12

   12 ParamListSameType: T_comma T_identifier . ParamListSameType

    T_comma  shift, and go to state 9

    $default  reduce using rule 13 (ParamListSameType)

    ParamListSameType  go to state 15


State 13

   10 ParamList: T_identifier ParamListSameType T_col . Type ParamListNewType

    T_bool_type     shift, and go to state 16
    T_char_type     shift, and go to state 17
    T_int_type      shift, and go to state 18
    T_string_type   shift, and go to state 19
    T_intptr_type   shift, and go to state 20
    T_charptr_type  shift, and go to state 21

    Type  go to state 22


State 14

    2 Procedure: T_proc T_identifier T_openParen ParamList T_closeParen T_return . Type T_openCurly BodyProc T_closeCurly Procedure

    T_bool_type     shift, and go to state 16
    T_char_type     shift, and go to state 17
    T_int_type      shift, and go to state 18
    T_string_type   shift, and go to state 19
    T_intptr_type   shift, and go to state 20
    T_charptr_type  shift, and go to state 21

    Type  go to state 23


State 15

   12 ParamListSameType: T_comma T_identifier ParamListSameType .

    $default  reduce using rule 12 (ParamListSameType)


State 16

    4 Type: T_bool_type .

    $default  reduce using rule 4 (Type)


State 17

    8 Type: T_char_type .

    $default  reduce using rule 8 (Type)


State 18

    5 Type: T_int_type .

    $default  reduce using rule 5 (Type)


State 19

    9 Type: T_string_type . T_openBracket Num T_closeBracket

    T_openBracket  shift, and go to state 24


State 20

    6 Type: T_intptr_type .

    $default  reduce using rule 6 (Type)


State 21

    7 Type: T_charptr_type .

    $default  reduce using rule 7 (Type)


State 22

   10 ParamList: T_identifier ParamListSameType T_col Type . ParamListNewType

    T_identifier  shift, and go to state 7
    T_semiCol     shift, and go to state 25

    $default  reduce using rule 11 (ParamList)

    ParamList         go to state 26
    ParamListNewType  go to state 27


State 23

    2 Procedure: T_proc T_identifier T_openParen ParamList T_closeParen T_return Type . T_openCurly BodyProc T_closeCurly Procedure

    T_openCurly  shift, and go to state 28


State 24

    9 Type: T_string_type T_openBracket . Num T_closeBracket

    T_num_oct  shift, and go to state 29
    T_num_bin  shift, and go to state 30
    T_num_hex  shift, and go to state 31
    T_num_dec  shift, and go to state 32

    Num  go to state 33


State 25

   14 ParamListNewType: T_semiCol . ParamList

    T_identifier  shift, and go to state 7

    $default  reduce using rule 11 (ParamList)

    ParamList  go to state 34


State 26

   15 ParamListNewType: ParamList .

    $default  reduce using rule 15 (ParamListNewType)


State 27

   10 ParamList: T_identifier ParamListSameType T_col Type ParamListNewType .

    $default  reduce using rule 10 (ParamList)


State 28

    2 Procedure: T_proc T_identifier T_openParen ParamList T_closeParen T_return Type T_openCurly . BodyProc T_closeCurly Procedure

    T_proc  shift, and go to state 1

    $default  reduce using rule 3 (Procedure)

    Procedure  go to state 35
    BodyProc   go to state 36


State 29

   64 Num: T_num_oct .

    $default  reduce using rule 64 (Num)


State 30

   65 Num: T_num_bin .

    $default  reduce using rule 65 (Num)


State 31

   66 Num: T_num_hex .

    $default  reduce using rule 66 (Num)


State 32

   63 Num: T_num_dec .

    $default  reduce using rule 63 (Num)


State 33

    9 Type: T_string_type T_openBracket Num . T_closeBracket

    T_closeBracket  shift, and go to state 37


State 34

   14 ParamListNewType: T_semiCol ParamList .

    $default  reduce using rule 14 (ParamListNewType)


State 35

   20 BodyProc: Procedure . BodyVar BodyState Return

    T_var  shift, and go to state 38

    $default  reduce using rule 23 (BodyVar)

    BodyVar  go to state 39


State 36

    2 Procedure: T_proc T_identifier T_openParen ParamList T_closeParen T_return Type T_openCurly BodyProc . T_closeCurly Procedure

    T_closeCurly  shift, and go to state 40


State 37

    9 Type: T_string_type T_openBracket Num T_closeBracket .

    $default  reduce using rule 9 (Type)


State 38

   22 BodyVar: T_var . T_identifier BodyVarSameType T_col Type T_semiCol BodyVar

    T_identifier  shift, and go to state 41


State 39

   20 BodyProc: Procedure BodyVar . BodyState Return

    T_deRef       shift, and go to state 42
    T_openCurly   shift, and go to state 43
    T_if          shift, and go to state 44
    T_while       shift, and go to state 45
    T_identifier  shift, and go to state 46

    $default  reduce using rule 33 (BodyState)

    BodyState  go to state 47
    Lhs        go to state 48


State 40

    2 Procedure: T_proc T_identifier T_openParen ParamList T_closeParen T_return Type T_openCurly BodyProc T_closeCurly . Procedure

    T_proc  shift, and go to state 1

    $default  reduce using rule 3 (Procedure)

    Procedure  go to state 49


State 41

   22 BodyVar: T_var T_identifier . BodyVarSameType T_col Type T_semiCol BodyVar

    T_comma  shift, and go to state 50

    $default  reduce using rule 25 (BodyVarSameType)

    BodyVarSameType  go to state 51


State 42

   36 Lhs: T_deRef . T_identifier

    T_identifier  shift, and go to state 52


State 43

   28 BodyState: T_openCurly . BodyVar BodyState T_closeCurly BodyState

    T_var  shift, and go to state 38

    $default  reduce using rule 23 (BodyVar)

    BodyVar  go to state 53


State 44

   29 BodyState: T_if . T_openParen Expr T_closeParen T_openCurly BodyVar BodyState T_closeCurly BodyState
   30          | T_if . T_openParen Expr T_closeParen T_openCurly BodyVar BodyState T_closeCurly T_else T_openCurly BodyVar BodyState T_closeCurly BodyState

    T_openParen  shift, and go to state 54


State 45

   31 BodyState: T_while . T_openParen Expr T_closeParen T_openCurly BodyVar BodyState T_closeCurly BodyState

    T_openParen  shift, and go to state 55


State 46

   34 Lhs: T_identifier .
   35    | T_identifier . T_openBracket Expr T_closeBracket

    T_openBracket  shift, and go to state 56

    $default  reduce using rule 34 (Lhs)


State 47

   20 BodyProc: Procedure BodyVar BodyState . Return

    T_return  shift, and go to state 57

    Return  go to state 58


State 48

   26 BodyState: Lhs . T_assign Expr T_semiCol BodyState
   27          | Lhs . T_assign T_string T_semiCol BodyState
   32          | Lhs . T_assign T_identifier T_openParen Params T_closeParen T_semiCol BodyState

    T_assign  shift, and go to state 59


State 49

    2 Procedure: T_proc T_identifier T_openParen ParamList T_closeParen T_return Type T_openCurly BodyProc T_closeCurly Procedure .

    $default  reduce using rule 2 (Procedure)


State 50

   24 BodyVarSameType: T_comma . T_identifier BodyVarSameType

    T_identifier  shift, and go to state 60


State 51

   22 BodyVar: T_var T_identifier BodyVarSameType . T_col Type T_semiCol BodyVar

    T_col  shift, and go to state 61


State 52

   36 Lhs: T_deRef T_identifier .

    $default  reduce using rule 36 (Lhs)


State 53

   28 BodyState: T_openCurly BodyVar . BodyState T_closeCurly BodyState

    T_deRef       shift, and go to state 42
    T_openCurly   shift, and go to state 43
    T_if          shift, and go to state 44
    T_while       shift, and go to state 45
    T_identifier  shift, and go to state 46

    $default  reduce using rule 33 (BodyState)

    BodyState  go to state 62
    Lhs        go to state 48


State 54

   29 BodyState: T_if T_openParen . Expr T_closeParen T_openCurly BodyVar BodyState T_closeCurly BodyState
   30          | T_if T_openParen . Expr T_closeParen T_openCurly BodyVar BodyState T_closeCurly T_else T_openCurly BodyVar BodyState T_closeCurly BodyState

    T_plus        shift, and go to state 63
    T_minus       shift, and go to state 64
    T_not         shift, and go to state 65
    T_deRef       shift, and go to state 66
    T_addr        shift, and go to state 67
    T_openParen   shift, and go to state 68
    T_true        shift, and go to state 69
    T_false       shift, and go to state 70
    T_char        shift, and go to state 71
    T_num_oct     shift, and go to state 29
    T_num_bin     shift, and go to state 30
    T_num_hex     shift, and go to state 31
    T_num_dec     shift, and go to state 32
    T_null        shift, and go to state 72
    T_identifier  shift, and go to state 73
    T_pipe        shift, and go to state 74

    Expr  go to state 75
    Num   go to state 76


State 55

   31 BodyState: T_while T_openParen . Expr T_closeParen T_openCurly BodyVar BodyState T_closeCurly BodyState

    T_plus        shift, and go to state 63
    T_minus       shift, and go to state 64
    T_not         shift, and go to state 65
    T_deRef       shift, and go to state 66
    T_addr        shift, and go to state 67
    T_openParen   shift, and go to state 68
    T_true        shift, and go to state 69
    T_false       shift, and go to state 70
    T_char        shift, and go to state 71
    T_num_oct     shift, and go to state 29
    T_num_bin     shift, and go to state 30
    T_num_hex     shift, and go to state 31
    T_num_dec     shift, and go to state 32
    T_null        shift, and go to state 72
    T_identifier  shift, and go to state 73
    T_pipe        shift, and go to state 74

    Expr  go to state 77
    Num   go to state 76


State 56

   35 Lhs: T_identifier T_openBracket . Expr T_closeBracket

    T_plus        shift, and go to state 63
    T_minus       shift, and go to state 64
    T_not         shift, and go to state 65
    T_deRef       shift, and go to state 66
    T_addr        shift, and go to state 67
    T_openParen   shift, and go to state 68
    T_true        shift, and go to state 69
    T_false       shift, and go to state 70
    T_char        shift, and go to state 71
    T_num_oct     shift, and go to state 29
    T_num_bin     shift, and go to state 30
    T_num_hex     shift, and go to state 31
    T_num_dec     shift, and go to state 32
    T_null        shift, and go to state 72
    T_identifier  shift, and go to state 73
    T_pipe        shift, and go to state 74

    Expr  go to state 78
    Num   go to state 76


State 57

   21 Return: T_return . Expr T_semiCol

    T_plus        shift, and go to state 63
    T_minus       shift, and go to state 64
    T_not         shift, and go to state 65
    T_deRef       shift, and go to state 66
    T_addr        shift, and go to state 67
    T_openParen   shift, and go to state 68
    T_true        shift, and go to state 69
    T_false       shift, and go to state 70
    T_char        shift, and go to state 71
    T_num_oct     shift, and go to state 29
    T_num_bin     shift, and go to state 30
    T_num_hex     shift, and go to state 31
    T_num_dec     shift, and go to state 32
    T_null        shift, and go to state 72
    T_identifier  shift, and go to state 73
    T_pipe        shift, and go to state 74

    Expr  go to state 79
    Num   go to state 76


State 58

   20 BodyProc: Procedure BodyVar BodyState Return .

    $default  reduce using rule 20 (BodyProc)


State 59

   26 BodyState: Lhs T_assign . Expr T_semiCol BodyState
   27          | Lhs T_assign . T_string T_semiCol BodyState
   32          | Lhs T_assign . T_identifier T_openParen Params T_closeParen T_semiCol BodyState

    T_plus        shift, and go to state 63
    T_minus       shift, and go to state 64
    T_not         shift, and go to state 65
    T_deRef       shift, and go to state 66
    T_addr        shift, and go to state 67
    T_openParen   shift, and go to state 68
    T_true        shift, and go to state 69
    T_false       shift, and go to state 70
    T_string      shift, and go to state 80
    T_char        shift, and go to state 71
    T_num_oct     shift, and go to state 29
    T_num_bin     shift, and go to state 30
    T_num_hex     shift, and go to state 31
    T_num_dec     shift, and go to state 32
    T_null        shift, and go to state 72
    T_identifier  shift, and go to state 81
    T_pipe        shift, and go to state 74

    Expr  go to state 82
    Num   go to state 76


State 60

   24 BodyVarSameType: T_comma T_identifier . BodyVarSameType

    T_comma  shift, and go to state 50

    $default  reduce using rule 25 (BodyVarSameType)

    BodyVarSameType  go to state 83


State 61

   22 BodyVar: T_var T_identifier BodyVarSameType T_col . Type T_semiCol BodyVar

    T_bool_type     shift, and go to state 16
    T_char_type     shift, and go to state 17
    T_int_type      shift, and go to state 18
    T_string_type   shift, and go to state 19
    T_intptr_type   shift, and go to state 20
    T_charptr_type  shift, and go to state 21

    Type  go to state 84


State 62

   28 BodyState: T_openCurly BodyVar BodyState . T_closeCurly BodyState

    T_closeCurly  shift, and go to state 85


State 63

   53 Expr: T_plus . Expr

    T_plus        shift, and go to state 63
    T_minus       shift, and go to state 64
    T_not         shift, and go to state 65
    T_deRef       shift, and go to state 66
    T_addr        shift, and go to state 67
    T_openParen   shift, and go to state 68
    T_true        shift, and go to state 69
    T_false       shift, and go to state 70
    T_char        shift, and go to state 71
    T_num_oct     shift, and go to state 29
    T_num_bin     shift, and go to state 30
    T_num_hex     shift, and go to state 31
    T_num_dec     shift, and go to state 32
    T_null        shift, and go to state 72
    T_identifier  shift, and go to state 73
    T_pipe        shift, and go to state 74

    Expr  go to state 86
    Num   go to state 76


State 64

   52 Expr: T_minus . Expr

    T_plus        shift, and go to state 63
    T_minus       shift, and go to state 64
    T_not         shift, and go to state 65
    T_deRef       shift, and go to state 66
    T_addr        shift, and go to state 67
    T_openParen   shift, and go to state 68
    T_true        shift, and go to state 69
    T_false       shift, and go to state 70
    T_char        shift, and go to state 71
    T_num_oct     shift, and go to state 29
    T_num_bin     shift, and go to state 30
    T_num_hex     shift, and go to state 31
    T_num_dec     shift, and go to state 32
    T_null        shift, and go to state 72
    T_identifier  shift, and go to state 73
    T_pipe        shift, and go to state 74

    Expr  go to state 87
    Num   go to state 76


State 65

   51 Expr: T_not . Expr

    T_plus        shift, and go to state 63
    T_minus       shift, and go to state 64
    T_not         shift, and go to state 65
    T_deRef       shift, and go to state 66
    T_addr        shift, and go to state 67
    T_openParen   shift, and go to state 68
    T_true        shift, and go to state 69
    T_false       shift, and go to state 70
    T_char        shift, and go to state 71
    T_num_oct     shift, and go to state 29
    T_num_bin     shift, and go to state 30
    T_num_hex     shift, and go to state 31
    T_num_dec     shift, and go to state 32
    T_null        shift, and go to state 72
    T_identifier  shift, and go to state 73
    T_pipe        shift, and go to state 74

    Expr  go to state 88
    Num   go to state 76


State 66

   55 Expr: T_deRef . Expr

    T_plus        shift, and go to state 63
    T_minus       shift, and go to state 64
    T_not         shift, and go to state 65
    T_deRef       shift, and go to state 66
    T_addr        shift, and go to state 67
    T_openParen   shift, and go to state 68
    T_true        shift, and go to state 69
    T_false       shift, and go to state 70
    T_char        shift, and go to state 71
    T_num_oct     shift, and go to state 29
    T_num_bin     shift, and go to state 30
    T_num_hex     shift, and go to state 31
    T_num_dec     shift, and go to state 32
    T_null        shift, and go to state 72
    T_identifier  shift, and go to state 73
    T_pipe        shift, and go to state 74

    Expr  go to state 89
    Num   go to state 76

